[gd_scene load_steps=6 format=3 uid="uid://dhn7h7v87cdq8"]

[ext_resource type="Script" path="res://main/home/play_selection_screen.gd" id="1_gnf1m"]
[ext_resource type="PackedScene" uid="uid://8x0br77dsy7v" path="res://main/home/underline.tscn" id="2_siudc"]
[ext_resource type="PackedScene" uid="uid://bxh3hu0rayil5" path="res://main/home/server_display.tscn" id="2_vn0pu"]
[ext_resource type="PackedScene" uid="uid://b16xrjs6ew5gl" path="res://main/home/client_display.tscn" id="3_fx401"]
[ext_resource type="PackedScene" uid="uid://b8wnf12r6oe0" path="res://main/home/active_server_display.tscn" id="4_x3cyh"]

[node name="PlaySelectionScreen" type="Control" node_paths=PackedStringArray("vbox_server_list", "vbox_client_list", "vbox_active_server_list", "world_deletion_confirmation_window")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnf1m")
scene_server_display = ExtResource("2_vn0pu")
scene_client_display = ExtResource("3_fx401")
scene_active_server_display = ExtResource("4_x3cyh")
vbox_server_list = NodePath("TabContainer/Local/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer")
vbox_client_list = NodePath("TabContainer/Remote/VBoxContainer/ScrollContainer/VBoxContainer")
vbox_active_server_list = NodePath("TabContainer/Active/VBoxContainer/ScrollContainer/VBoxContainer")
world_deletion_confirmation_window = NodePath("DeleteLocalWorldConfirmationDialog")

[node name="BtnBackArrow" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 23.0
offset_right = 85.0
offset_bottom = 73.0
mouse_default_cursor_shape = 2
flat = true
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="BtnBackArrow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "<"

[node name="Underline" parent="BtnBackArrow/Label" node_paths=PackedStringArray("node") instance=ExtResource("2_siudc")]
layout_mode = 0
node = NodePath("../..")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 101.0
offset_top = 23.0
offset_right = 473.0
offset_bottom = 73.0
theme_type_variation = &"HeaderLarge"
text = "Select World"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -524.0
offset_top = 96.0
offset_right = 525.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Local" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Local"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Local/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BtnImportWorld" type="Button" parent="TabContainer/Local/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import"

[node name="BtnCreateWorld" type="Button" parent="TabContainer/Local/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Local/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
placeholder_text = "Search"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Local/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Local/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Local/VBoxContainer/HBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="TabContainer/Local/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Local/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnStartWorld" type="Button" parent="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="BtnEditWorld" type="Button" parent="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="BtnCopyWorld" type="Button" parent="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Copy"

[node name="BtnDeleteWorld" type="Button" parent="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="Remote" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Remote"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Remote/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Remote/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="BtnAddServer" type="Button" parent="TabContainer/Remote/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "Add Server"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Remote/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Remote/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Remote/VBoxContainer"]
layout_mode = 2

[node name="BtnRemoveServer" type="Button" parent="TabContainer/Remote/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="BtnEditServer" type="Button" parent="TabContainer/Remote/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="BtnJoinServer" type="Button" parent="TabContainer/Remote/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="Active" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Active"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Active/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Search"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Active/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Active/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteLocalWorldConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(500, 160)
ok_button_text = "Continue"
dialog_text = "This deletion is PERMANENT.
Are you sure?"
cancel_button_text = "Cancel!!!1!!11!"

[connection signal="pressed" from="BtnBackArrow" to="." method="_on_btn_back_arrow_pressed"]
[connection signal="pressed" from="TabContainer/Local/VBoxContainer/HBoxContainer/BtnCreateWorld" to="." method="_on_btn_create_world_pressed"]
[connection signal="pressed" from="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer/BtnStartWorld" to="." method="_on_btn_start_world_pressed"]
[connection signal="pressed" from="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer/BtnEditWorld" to="." method="_on_btn_edit_world_pressed"]
[connection signal="pressed" from="TabContainer/Local/VBoxContainer/HBoxContainer2/VBoxContainer/BtnDeleteWorld" to="." method="_on_btn_delete_world_pressed"]
[connection signal="pressed" from="TabContainer/Remote/VBoxContainer/HBoxContainer/BtnAddServer" to="." method="_on_btn_add_server_pressed"]
[connection signal="pressed" from="TabContainer/Remote/VBoxContainer/HBoxContainer2/BtnRemoveServer" to="." method="_on_btn_remove_server_pressed"]
[connection signal="pressed" from="TabContainer/Remote/VBoxContainer/HBoxContainer2/BtnJoinServer" to="." method="_on_btn_join_server_pressed"]
[connection signal="confirmed" from="DeleteLocalWorldConfirmationDialog" to="." method="_on_delete_local_world_confirmation_dialog_confirmed"]
